# reminder-lint

./: .gitignore  .remindignore  CHANGELOG.md  CONTRIBUTING-ja.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README-ja.md  README.md  action.yml  biome.json  cliff.toml  dist-workspace.toml  remind.yaml  remind.yml
.github/: CODEOWNERS  matcher.json
.github/workflows/: ci.yml  docker-release.yml  release.yml  version.yml
actions/: Dockerfile  entrypoint.sh
cli/: Cargo.toml
cli/src/: args.rs  main.rs  print.rs
cli/src/subcommand/: init.rs  list.rs  mod.rs  run.rs  validate.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  options.rs  remind.rs
core/src/config/: builder.rs  mod.rs
core/src/remind/: meta.rs  meta_test.rs  mod.rs
src/: config.rs  main.rs
testdata/: test.txt
testdata/pkg/: main.go
vscode-extension/: README.md  package.json  pnpm-lock.yaml
vscode-extension/src/: diagnostics.ts  extension.ts  logging.ts  types.ts  util.ts
