[package]
name = "reminder-lint"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/CyberAgent/reminder-lint"
description = "reminder-lint command line tool."
homepage = "https://github.com/CyberAgent/reminder-lint"

[dependencies]
reminder-lint-core = { path = "../core" }
anyhow = { version = "1.0.82" }
argh = "0.1.10"
promptuity = "0.0.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
